# labs

./: README.md
lab 9/: CMakeLists.txt  lab.9.cpp
lab6,7/: CMakeLists.txt  input.txt  lab6_1.cpp
lab6,7/inc/: func.hpp
lab6,7/src/: func.cpp
project/: CMakeLists.txt  main.cpp
project/inc/: planets.hpp
project/src/: planets.cpp
