cmake_minimum_required(VERSION 3.15) # Проверка версии CMake.
									 # Если версия установленой программы
									 # старее указаной, произайдёт аварийный выход.

set(PROJECT_NAME sfml_sample)				 # имя проекта		 
project("${PROJECT_NAME}")


set(CMAKE_CXX_STANDARD 17)			 # устанавливаем 17 стандарт языка
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)


add_definitions(-DSFML_STATIC)		 # дефайны

include_directories("ext/SFML/include/")	# добавляем директории
include_directories("inc/")
link_directories("ext/SFML/lib/")	

add_executable("${PROJECT_NAME}" main.cpp
                                                inc/planets.hpp
						src/planets.cpp)	# добавить исполняемый файл
		

file(COPY earth.png DESTINATION "/")
file(COPY jupiter.png DESTINATION "/")
file(COPY mars.png DESTINATION "/")
file(COPY merk.png DESTINATION "/")
file(COPY moon.png DESTINATION "/")
file(COPY saturn.png DESTINATION "/")
file(COPY sun.png DESTINATION "/")
file(COPY venus.png DESTINATION "/")
											
target_link_libraries("${PROJECT_NAME}" sfml-graphics-s-d
						  sfml-window-s-d
						  sfml-system-s-d
						  opengl32
						  freetype
						  winmm
						  gdi32
						  sfml-audio-s-d
						  openal32
						  flac
						  vorbisenc
						  vorbisfile
						  vorbis
						  ogg)